--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.3",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
