--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "immer": "^10.0.2",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
