--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@tanstack/react-query": "^4.29.15",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -25,10 +26,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.1",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
-    "swr": "^2.1.5",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
